# RadioScannerAndSummarizer

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.base  Makefile  Project_Proposal.docx  README.md  Workflow.md  docker-compose.yml  package-lock.json  start.bat  start.sh  structure.txt
.devcontainer/: devcontainer.json
ai-worker/: Dockerfile  entrypoint.sh
ai-worker/src/: main.cpp
ai-worker/src/ollamatest/: ollamatest.cpp  ollamatest.hpp
ai-worker/src/openai/: openai.cpp
ai-worker/src/whispertinytest/: whispertinytest.cpp  whispertinytest.hpp
api-core/: CMakeLists.txt  Dockerfile
api-core/src/: main.cpp
api-core/src/dbfunction/corefunction/: dbcorefunctions.cpp  dbcorefunctions.hpp
api-core/src/dbfunction/filterfunction/: dbcorefilter.cpp  dbcorefilter.hpp
client/: index.html  notes.txt  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  WifiSearchAnimation.jsx
include/: iq_protocol.hpp
sdr-daemon/: CMakeLists.txt  Dockerfile
sdr-daemon/src/: main.cpp
sdr-daemon/src/iqtowav/: iqtowav.cpp  iqtowav.hpp
sdr-daemon/src/sdr/: sdr_handler.cpp  sdr_handler.hpp
sdr-relay/: CMakeLists.txt  main.cpp  relay_config.hpp  sdr_handler.cpp  sdr_handler.hpp
server/src/: main.cpp
server/src/RdsDecoder/: RdsDecoder.cpp  RdsDecoder.hpp
server/src/dbfunction/filterfunction/: dbcorefilter.hpp
server/src/iqtowav/: iqtowav.cpp  iqtowav.hpp
server/src/ollamatest/: ollamatest.cpp
server/src/openai/: openai.cpp  openai.hpp
server/src/sdr/: sdr_handler.cpp  sdr_handler.hpp
